--- a/test.html
+++ b/test.html
@@ -67,27 +67,27 @@
         return res.concat(left, right);
       }
 
-// 防抖: 多次调用, 运行1次
-function debounce (fn, timeout = 300) {
-  return function (...args) {
-    clearTimeout(fn._tid);
-    fn._tid = setTimeout(() => {
-      fn.call(this, ...args);
-    }, timeout);
-  };
-}
+      // 防抖: 多次调用, 运行1次
+      function debounce (fn, timeout = 300) {
+        return function (...args) {
+          clearTimeout(fn._tid);
+          fn._tid = setTimeout(() => {
+            fn.call(this, ...args);
+          }, timeout);
+        };
+      }
 
-// 节流: 多次调用, 每个时间间隔运行1次
-function throttle (fn, timeout = 300) {
-  let start = Date.now();
-  return function (...args) {
-    const now = Date.now();
-    if (now - start >= timeout) {
-      fn.call(this, ...args);
-      start = now;
-    }
-  };
-}
+      // 节流: 多次调用, 每个时间间隔运行1次
+      function throttle (fn, timeout = 300) {
+        let start = Date.now();
+        return function (...args) {
+          const now = Date.now();
+          if (now - start >= timeout) {
+            fn.call(this, ...args);
+            start = now;
+          }
+        };
+      }
 
       // 柯里化
       function curry (fn, ...prevArgs) {
@@ -109,6 +109,44 @@ function throttle (fn, timeout = 300) {
 
       const curryLog = curry(toCurryLog);
       curryLog(1)(2, 3);
+
+      class EventEmitter {
+        constructor () {
+          this.events = {};
+        }
+
+        on (type, fn) {
+          const typeFns = this.events[type] || (this.events[type] = []);
+          typeFns.push(fn);
+          return this;
+        }
+
+        once (type, fn) {
+          const tmpFn = (...args) => {
+            fn.call(this, ...args);
+            this.off(type, tmpFn);
+          };
+          this.on(type, tmpFn);
+          return this;
+        }
+
+        emit (type, ...args) {
+          const typeFns = this.events[type] || [];
+          typeFns.forEach((fn) => fn.call(this, ...args));
+          return this;
+        }
+
+        off (type, fn) {
+          if (fn === undefined) {
+            this.events[type] = null;
+          }
+          else {
+            const typeFns = this.events[type] || [];
+            typeFns.splice(typeFns.indexOf(fn), 1);
+          }
+          return this;
+        }
+      }
     </script>
   </body>
 </html>
