feat: async/await

--- a/test.html
+++ b/test.html
@@ -327,183 +327,248 @@
       // console.log(caculateDependency('T1->T2,T2->T3,T2->T4,T3->T4,T4->T5,T6'));
       // console.log(caculateDependency('T1->T2,T2->T3,T3->T1'));
 
-      const PENDING = 'pending';
-      const FULFILLED = 'fulfilled';
-      const REJECTED = 'rejected';
+      // const PENDING = 'pending';
+      // const FULFILLED = 'fulfilled';
+      // const REJECTED = 'rejected';
+      //
+      // class _Promise {
+      //   constructor (executor) {
+      //     this._status = PENDING;
+      //     this._value = undefined;
+      //     this._resolves = [];
+      //     this._rejects = [];
+      //
+      //     const resolve = (value) => {
+      //       const run = () => {
+      //         if (this._status !== PENDING) {
+      //           return;
+      //         }
+      //
+      //         this._status = FULFILLED;
+      //         this._value = value;
+      //
+      //         while (this._resolves.length) {
+      //           const callback = this._resolves.shift();
+      //           callback(value);
+      //         }
+      //       };
+      //       setTimeout(run);
+      //     };
+      //
+      //     const reject = (value) => {
+      //       const run = () => {
+      //         if (this._status !== PENDING) {
+      //           return;
+      //         }
+      //
+      //         this._status = REJECTED;
+      //         this._value = value;
+      //
+      //         while (this._rejects.length) {
+      //           const callback = this._rejects.unshift();
+      //           callback(value);
+      //         }
+      //       };
+      //       setTimeout(run);
+      //     };
+      //
+      //     // 初始化时, 立即执行executor
+      //     executor(resolve, reject);
+      //   }
+      //
+      //   then (resolveFn, rejectFn) {
+      //     if (typeof resolveFn !== 'function') {
+      //       resolveFn = (value) => value;
+      //     }
+      //     if (typeof rejectFn !== 'function') {
+      //       rejectFn = (reason) => {
+      //         throw new Error(reason instanceof Error ? reason.message : reason);
+      //       };
+      //     }
+      //
+      //     return new _Promise((resolve, reject) => {
+      //       const fulfilled = (val) => {
+      //         try {
+      //           const res = resolveFn(val);
+      //           res instanceof _Promise ? res.then(resolve, reject) : resolve(res);
+      //         }
+      //         catch (e) {
+      //           reject(e);
+      //         }
+      //       };
+      //
+      //       const rejected = (err) => {
+      //         try {
+      //           let res = rejectFn(err);
+      //           res instanceof _Promise ? res.then(resolve, reject) : resolve(res);
+      //         }
+      //         catch (e) {
+      //           reject(e);
+      //         }
+      //       };
+      //
+      //       switch (this._status) {
+      //         case PENDING: {
+      //           this._resolves.push(fulfilled);
+      //           this._rejects.push(rejected);
+      //           break;
+      //         }
+      //         // 状态为FULFILLED/REJECTED时, 直接执行then回调
+      //         case FULFILLED: {
+      //           fulfilled(this._value);
+      //           break;
+      //         }
+      //         case REJECTED: {
+      //           rejected(this._value);
+      //           break;
+      //         }
+      //       }
+      //     });
+      //   }
+      //
+      //   catch (rejectFn) {
+      //     return this.then(undefined, rejectFn);
+      //   }
+      //
+      //   finally (callback) {
+      //     return this.then(
+      //       value => _Promise.resolve(callback()).then(() => value),
+      //       reason => _Promise.resolve(callback()).then(() => {throw reason;}),
+      //     );
+      //   }
+      //
+      //   static resolve (value) {
+      //     return value instanceof _Promise ? value : new _Promise((resolve) => resolve(value));
+      //   }
+      //
+      //   static reject (reason) {
+      //     return new _Promise((_, reject) => reject(reason));
+      //   }
+      //
+      //   static all (promises) {
+      //     let count;
+      //     const res = [];
+      //
+      //     return new _Promise((resolve, reject) => {
+      //       promises.forEach((promise, index) => {
+      //         _Promise.resolve(promise).then(
+      //           (value) => {
+      //             count++;
+      //             res[index] = value;
+      //             if (count === promises.length) {
+      //               resolve(res);
+      //             }
+      //           },
+      //           (error) => {
+      //             reject(error);
+      //           },
+      //         );
+      //       });
+      //     });
+      //   }
+      //
+      //   static race (promises) {
+      //     return new _Promise((resolve, reject) => {
+      //       for (let promise of promises) {
+      //         _Promise.resolve(promise).then(
+      //           (value) => {
+      //             resolve(value);
+      //           },
+      //           (error) => {
+      //             reject(error);
+      //           },
+      //         );
+      //       }
+      //     });
+      //   }
+      // }
+      //
+      // new _Promise((resolve, reject) => {
+      //   setTimeout(() => {
+      //     resolve(1);
+      //   }, 500);
+      // })
+      //   .then(res => {
+      //     console.log(res);
+      //     return new _Promise((resolve) => {
+      //       setTimeout(() => {
+      //         resolve(2);
+      //       }, 1000);
+      //     });
+      //   })
+      //   .then(res => {
+      //     console.log(res);
+      //     return 3;
+      //   })
+      //   .then(res => {
+      //     console.log(res);
+      //   })
+      //   .catch(console.log);
 
-      class _Promise {
-        constructor (executor) {
-          this._status = PENDING;
-          this._value = undefined;
-          this._resolves = [];
-          this._rejects = [];
+      // function* generator () {
+      //   console.log(yield Promise.resolve(1));   //1
+      //   console.log(yield Promise.resolve(2));   //2
+      //   console.log(yield Promise.resolve(3));   //3
+      // }
+      //
+      // const gen = generator();
+      // gen.next().value.then(val => {
+      //   // console.log(val)
+      //   gen.next(val).value.then(val => {
+      //     // console.log(val)
+      //     gen.next(val).value.then(val => {
+      //       // console.log(val)
+      //       gen.next(val);
+      //     });
+      //   });
+      // });
 
-          const resolve = (value) => {
-            const run = () => {
-              if (this._status !== PENDING) {
-                return;
-              }
-
-              this._status = FULFILLED;
-              this._value = value;
-
-              while (this._resolves.length) {
-                const callback = this._resolves.shift();
-                callback(value);
-              }
-            };
-            setTimeout(run);
-          };
-
-          const reject = (value) => {
-            const run = () => {
-              if (this._status !== PENDING) {
-                return;
-              }
-
-              this._status = REJECTED;
-              this._value = value;
-
-              while (this._rejects.length) {
-                const callback = this._rejects.unshift();
-                callback(value);
-              }
-            };
-            setTimeout(run);
-          };
-
-          // 初始化时, 立即执行executor
-          executor(resolve, reject);
-        }
-
-        then (resolveFn, rejectFn) {
-          if (typeof resolveFn !== 'function') {
-            resolveFn = (value) => value;
-          }
-          if (typeof rejectFn !== 'function') {
-            rejectFn = (reason) => {
-              throw new Error(reason instanceof Error ? reason.message : reason);
-            };
-          }
-
-          return new _Promise((resolve, reject) => {
-            const fulfilled = (val) => {
-              try {
-                const res = resolveFn(val);
-                res instanceof _Promise ? res.then(resolve, reject) : resolve(res);
-              }
-              catch (e) {
-                reject(e);
-              }
-            };
-
-            const rejected = (err) => {
-              try {
-                let res = rejectFn(err);
-                res instanceof _Promise ? res.then(resolve, reject) : resolve(res);
-              }
-              catch (e) {
-                reject(e);
-              }
-            };
-
-            switch (this._status) {
-              case PENDING: {
-                this._resolves.push(fulfilled);
-                this._rejects.push(rejected);
-                break;
-              }
-              // 状态为FULFILLED/REJECTED时, 直接执行then回调
-              case FULFILLED: {
-                fulfilled(this._value);
-                break;
-              }
-              case REJECTED: {
-                rejected(this._value);
-                break;
-              }
-            }
-          });
-        }
-
-        catch (rejectFn) {
-          return this.then(undefined, rejectFn);
-        }
-
-        finally (callback) {
-          return this.then(
-            value => _Promise.resolve(callback()).then(() => value),
-            reason => _Promise.resolve(callback()).then(() => {throw reason;}),
-          );
-        }
-
-        static resolve (value) {
-          return value instanceof _Promise ? value : new _Promise((resolve) => resolve(value));
-        }
-
-        static reject (reason) {
-          return new _Promise((_, reject) => reject(reason));
-        }
-
-        static all (promises) {
-          let count;
-          const res = [];
-
-          return new _Promise((resolve, reject) => {
-            promises.forEach((promise, index) => {
-              _Promise.resolve(promise).then(
-                (value) => {
-                  count++;
-                  res[index] = value;
-                  if (count === promises.length) {
-                    resolve(res);
-                  }
-                },
-                (error) => {
-                  reject(error);
-                },
-              );
-            });
-          });
-        }
-
-        static race (promises) {
-          return new _Promise((resolve, reject) => {
-            for (let promise of promises) {
-              _Promise.resolve(promise).then(
-                (value) => {
-                  resolve(value);
-                },
-                (error) => {
-                  reject(error);
-                },
-              );
-            }
-          });
-        }
-      }
-
-      new _Promise((resolve, reject) => {
-        setTimeout(() => {
-          resolve(1);
-        }, 500);
-      })
-        .then(res => {
-          console.log(res);
-          return new _Promise((resolve) => {
-            setTimeout(() => {
-              resolve(2);
-            }, 1000);
-          });
-        })
-        .then(res => {
-          console.log(res);
-          return 3;
-        })
-        .then(res => {
-          console.log(res);
-        })
-        .catch(console.log);
+      // function run (gen) {
+      //   return new Promise((resolve, reject) => {
+      //     const g = gen();
+      //
+      //     function step (value) {
+      //       let res;
+      //       try {
+      //         res = g.next(value);
+      //       }
+      //       catch (e) {
+      //         return reject(e);
+      //       }
+      //
+      //       if (res.done) {˝
+      //   return res.value;
+      //       }
+      //
+      //       Promise.resolve(res.value).then(
+      //         (value) => {
+      //           step(value);
+      //         },
+      //         (error) => {
+      //           g.throw(error);
+      //         },
+      //       );
+      //     }
+      //
+      //     step();
+      //   });
+      // }
+      //
+      // function* generator2 () {
+      //   try {
+      //     console.log(yield new Promise((resolve) => {
+      //       setTimeout(() => {
+      //         resolve(1);
+      //       }, 1000);
+      //     }));
+      //     console.log(yield 2);   //2
+      //     console.log(yield Promise.reject('error'));
+      //   }
+      //   catch (error) {
+      //     console.log(error);
+      //   }
+      // }
+      // run(generator2);
 
 
     </script>
